@@ -82,13 +82,66 @@ bool
 SCOREP_Instrumenter_CudaAdapter::checkCommand( const std::string& current,
                                                const std::string& next )
 {
+    bool skip_next = false;
+
+    if ( current.substr( 0, 2 ) == "-l" )
+    {
+        std::string lib = current.substr( 2 );
+        if ( lib.length() == 0 )
+        {
+            lib       = next;
+            skip_next = true;
+        }
+        if ( ( m_usage == detect )
+             && check_lib_name( lib, "cudart" ) )
+        {
+            m_usage = enabled;
+        }
+    }
+
     if ( ( current[ 0 ] != '-' ) &&
          is_cuda_file( current ) &&
          ( m_usage == detect ) )
     {
         m_usage = enabled;
     }
-    return false;
+
+    return skip_next;
+}
+
+void
+SCOREP_Instrumenter_CudaAdapter::checkObjects( SCOREP_Instrumenter& instrumenter )
+{
+    if ( m_usage != detect )
+    {
+        /* heuristic overwritten */
+        return;
+    }
+
+    std::vector<std::string>* object_list = instrumenter.getInputFiles();
+    std::stringstream         all_objects_stream;
+    for ( std::vector<std::string>::iterator current_file = object_list->begin();
+          current_file != object_list->end();
+          current_file++ )
+    {
+        if ( is_object_file( *current_file ) || is_library( *current_file ) )
+        {
+            all_objects_stream << " " << *current_file;
+        }
+    }
+    all_objects_stream << instrumenter.getCommandLine().getLibraryFiles();
+
+    std::string command = SCOREP_NM " " + all_objects_stream.str() + " 2>/dev/null | "
+                          SCOREP_EGREP " -l '(r fatbinData|U cuda|U __cuda)' >/dev/null 2>&1";
+    if ( instrumenter.getCommandLine().getVerbosity() >= 1 )
+    {
+        std::cerr << command << std::endl;
+    }
+    int return_value = system( command.c_str() );
+    if ( return_value == 0 )
+    {
+        m_usage = enabled;
+    }
 }
 
 std::string
