@@ -68,6 +68,9 @@ Features and improvements:
   - Item 25: `MPI_Info_create_env`
 - Kernel parameters for CUDA kernels are now recorded as parameters in Cube and
   OTF2, instead of metrics.
+- CUDA instrumentation is now heuristically enabled by the Score-P instrumenter
+  when not linking with the `nvcc` compiler but the object files reference the
+  CUDA runtime or the library is specified on the command line.
 
 User tools and API improvements and changes:
 
